--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,11 @@
-<body style='padding: 0; margin: 0px'>
-  <div id="root"></div>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Rigi of the Night</title>
+  </head>
+
+  <body style="padding: 0; margin: 0px">
+    <div id="root"></div>
+  </body>
+</html>
